# engrammic

./: .coveragerc  .dockerignore  .env.beta  .env.beta.example  .env.example  .env.test  .gcloudignore  .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dagster  Dockerfile.partners  LICENSE  README.md  REVIEW.md  SECURITY.md  UPGRADING.md  cloudbuild.api.yaml  cloudbuild.beacon.yaml  cloudbuild.dagster.yaml  cloudbuild.partners.yaml  cloudbuild.releases.yaml  dagger.json  dagster.yaml  deploy.just  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.signoz.yml  docker-compose.yml  justfile  ops.just  pyproject.toml  release-please-config.json  skaffold.yaml  standalone.just  workspace.yaml
.dagger/: pyproject.toml
.github/workflows/: build-base-images.yml  deploy-beta.yml  deploy-dev.yml  deploy-prod.yml  integration-tests.yml  publish-selfhosted.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_silo_config_preset.py  0003_add_orphan_last_retry_at.py  0004_add_user_and_tool_usage.py  0005_add_silo_source_rules.py  0006_add_beacon_tables.py  0007_add_oauth_tables.py  0008_fix_user_datetime_tz.py  0009_add_api_keys_table.py  0010_remove_api_keys_table.py  0011_add_erasure_audit_log.py  0012_create_metabase_database.py  0013_seed_hosted_beacon_secret.py  0014_create_service_telemetry_tables.py  0015_add_licenses_table.py  0016_add_reasoning_chain_steps_tx7_fields.py  0017_add_trigram_index.py  0018_backfill_node_status.py  0019_multi_agent_coherence_schema.py  138ad226813b_merge_skills_and_chain_feedback_branches.py  385b53d0c0c0_add_skills_table.py  42f64ba6df17_merge_heads_0016_and_d441746be43d.py  4e1253256b87_add_silo_tag_configs_table.py  a1b2c3d4e5f6_hybrid_storage_tables.py  b2c3d4e5f6g7_add_chain_feedback_tables.py  c3d4e5f6g7h8_add_session_step_embedding.py  d441746be43d_add_gin_index_nodes_content.py
architecture/: README.md
benchmarks/custodian_stress/: __init__.py  conftest.py  harness.py  mocks.py  runner.py
config/: clustering.yaml  diffusion.yaml  embeddings.test.yaml  embeddings.yaml  extraction.yaml  extraction_filter.yaml  models.yaml  otel-collector-dev.yaml  otel-collector.yaml  prompts.yaml  signoz-nginx.conf  signoz-otel-collector.yaml  signoz-prometheus.yml
config/clickhouse/: cluster.xml  config.xml  users.xml
config/prompts/: README.md
context/: api-examples.md  api-wholesale-pricing-draft.md  architecture-decision.md  architecture.md  cost-analysis.csv  deployment.md  design-partner-silt-notes.md  known-issues.md  manifesto.md  moat-and-positioning-2026-05-02.md  outreach-nitesh-silt.md  wiring-gaps-review.md
context/architecture/: README.md  dag-architecture.md  enum-registries.md  sage-system.md
context/archive/: 2026-05-15-pitch-scripts.md  2026-05-29-icp-and-gtm-strategy.md  api-wholesale-pricing-draft.md  cag-queries.md  cag-schema.md  improve-mcp-tool-tests.md  mcp-tools.md  outreach-nitesh-silt.md
context/brainstorm/: 2026-04-30-signals-port.md  (+28 more)
deploy/: .env.example  Caddyfile  coolify-setup.md  deploy.sh  docker-compose.deploy.yml  setup-server.sh
docker/: Dockerfile.api  Dockerfile.base-api  Dockerfile.base-dagster  Dockerfile.base-selfhosted  Dockerfile.base-selfhosted-dagster  Dockerfile.beacon  Dockerfile.dagster  Dockerfile.partners  Dockerfile.selfhosted.api  Dockerfile.selfhosted.beacon  Dockerfile.selfhosted.dagster  cloudbuild-app.yaml  cloudbuild-base.yaml  cloudbuild-selfhosted.yaml  dagster.dev.yaml  docker-compose.dev.yml  docker-compose.selfhosted.yml  docker-compose.standalone-lite.yml  docker-compose.standalone-pro.yml  docker-compose.standalone-standard.yml  docker-compose.standalone.yml  podman-compose.standalone.yml  selfhosted.env.example  selfhosted.env.ollama.example  selfhosted.env.vertex.example  standalone-lite.env.example  standalone-pro.env.example  standalone-standard.env.example  standalone.env.example
docs/: README.md  competitive-matrix.md  dag-architecture.md  supported-mcp-clients.md  technical-overview-investors.md
infra/: Pulumi.benchmark.yaml  Pulumi.beta.yaml  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  benchmark_main.py  docker-compose.infra.yml  just.infra  pyproject.toml
scripts/: _dogfood_data_api.py  _dogfood_data_claude.py  _dogfood_data_plans.py  backfill_chain_pointers.py  backfill_embeddings.py  backfill_expansions.py  backfill_postgres_nodes.py  backfill_splade.py  clustering_benchmark.py  compile_cython.py  dogfood_ingest.py  entrypoint.sh  eval_vertex_reranker.py  fetch_secrets.py  migrate_belongs_to.py  migrate_beta_2048.py  migrate_meta_observations.py  migrate_qdrant_quantization.py  migrate_qdrant_to_hybrid.py  probe_identity_server.py  reembed.py  run_evals.py  silo_export.py  silo_import.py  sync_secrets.py  validate_imports.py  workos_api_keys.py
skills/: README.md  connect.md  context-skills.old.md  learn.md  observe.md  reason.md  recall.md  reflect.md  trace.md
tests/: conftest.py  test_architecture_boundary.py  test_auth_dev_bypass.py  test_auth_prod_guard.py  test_auth_resolve_fail_closed.py  test_auto_reflection.py  test_auto_reflection_triggers.py  test_belief_history.py  test_belief_merging.py  test_belief_revision.py  test_belief_synthesis_pipeline.py  test_causal_completion.py  test_causal_edges.py  test_causal_transitivity.py  test_chain_saga.py  test_chain_stitch_asset.py  test_chain_stitcher.py  test_clustering_asset.py  test_clustering_scope.py  test_compaction.py  test_concurrency_tags.py  test_config_thresholds.py  test_consensus_priority_ordering.py  test_consolidation.py  test_context_query_freshness.py  test_context_query_heat.py  test_context_query_time_travel.py  test_context_recall_steps.py  test_custodian_enum_recovery.py  test_custodian_finalize_asset.py  test_custodian_visit_asset.py  test_dagster_resources.py  test_docs_disabled_in_prod.py  test_edge_type_matrix.py  test_embedding_asset.py  test_embedding_batching.py  test_evidence_service.py  test_extraction_asset.py  test_fact_promotion.py  test_hierarchical_reflection.py  (+43 more)
(+1344 files in other folders)
