[project]
name = "context-service"
version = "0.1.0-dev"
description = "Engrammic - cognitive substrate for AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Aliasgar Khimani", email = "khimanialiasgar@gmail.com" }]

dependencies = [
    # Internal
    "engrammic-primitives",
    # Web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # MCP
    "fastmcp>=2.0",
    # Graph + Vector
    "neo4j>=5.19", # Memgraph driver
    "qdrant-client>=1.9",
    # HTTP client
    "httpx>=0.27",
    "tenacity>=9.1.4",
    # Pipelines
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "dagster-postgres>=0.23",
    # Custodian agents
    "pydantic-ai>=0.0.14",
    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    # Redis
    "redis>=5.0",
    # Postgres (tag config)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # JSON
    "orjson>=3.9",
    "json-repair>=0.28",
    # Numeric
    "numpy>=1.26",
    "dtaidistance>=2.3.0",  # DTW for reasoning chain matching
    # LLM providers (unified)
    "litellm>=1.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260408",
]
embeddings = [
    "google-cloud-aiplatform>=1.50",  # Vertex AI
]
llm = [
    "google-cloud-aiplatform>=1.50",  # Vertex Gemini
    "google-generativeai>=0.5",        # Direct Gemini API
    "anthropic>=0.25",
    "openai>=1.30",
]
auth = [
    "workos==6.0.8",
]
splade = [
    "torch>=2.0",
    "transformers>=4.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]
"src/context_service/pipelines/jobs/*.py" = ["ARG001"]  # Dagster ops require context param

[tool.mypy]
python_version = "3.12"
strict = true

# Dagster sensors/ops don't support typed context parameters at runtime
[[tool.mypy.overrides]]
module = ["context_service.pipelines.sensors.*", "context_service.pipelines.jobs.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
markers = [
    "integration: tests that require live docker stack (Memgraph, Qdrant, Redis)",
]

[tool.uv.sources]
engrammic-primitives = { path = "../primitives", editable = true }
