[project]
name = "engrammic"
version = "0.6.0"
description = "Engrammic - cognitive substrate for AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Aliasgar Khimani", email = "khimanialiasgar@gmail.com" }]

# Core dependencies - truly universal, every image needs these
dependencies = [
    "engrammic-primitives>=0.1.8",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=9.1.4",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "orjson>=3.9",
    "cachetools>=5.3",
    "python-dateutil>=2.8.2",
]

[dependency-groups]
# API server deps
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "watchfiles>=1.0",
]
# MCP server
mcp = ["fastmcp>=2.0"]
# Graph + Vector stores
graph = [
    "neo4j>=5.19",  # Memgraph driver
    "qdrant-client>=1.9",
]
# Postgres (tags, config, alembic)
postgres = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]
# Redis + async task queue
redis = [
    "redis>=5.0",
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
]
# LLM providers (embeddings + reranking)
llm-core = [
    "litellm>=1.40",
    "batched>=0.1.5",
    "google-genai>=1.75.0",
    "google-cloud-aiplatform>=1.50",
    "json-repair>=0.28",
]
# Numeric (reasoning chain matching)
numeric = [
    "numpy>=1.26",
    "dtaidistance>=2.3.0",
]
# Cross-encoder reranking (heavy - ML models)
reranking = ["sentence-transformers>=3.0"]
# Dagster pipelines (heavy - dagster only)
pipelines = [
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "dagster-postgres>=0.23",
]
# SAGE custodian agents (heavy - dagster only)
custodian = ["pydantic-ai>=0.0.14"]
# Dev tooling
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260408",
    "types-cachetools>=7.0.0.20260518",
    "cython>=3.2.5",
    "setuptools>=81.0.0",
]
# Cloud provider SDKs (optional)
embeddings = ["google-cloud-aiplatform>=1.50"]
llm = [
    "google-cloud-aiplatform>=1.50",
    "google-generativeai>=0.5",
    "anthropic>=0.25",
    "openai>=1.30",
]
auth = [
    "workos==6.0.8",
    "google-cloud-secret-manager>=2.20",
]
sparse = [
    "fastembed>=0.8",
]
# Legacy SPLADE (requires torch ~2GB, use sparse group instead)
splade = [
    "torch>=2.0",
    "transformers>=4.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]
"src/context_service/pipelines/jobs/*.py" = ["ARG001"]  # Dagster ops require context param
"src/context_service/telemetry/recorder.py" = ["ARG001"]  # API compat: args unused in PG impl
"src/context_service/telemetry/tracing.py" = ["ARG001"]  # API compat: no-op stubs

[tool.mypy]
python_version = "3.12"
strict = true

# Dagster sensors/ops/schedules/assets use untyped decorators
[[tool.mypy.overrides]]
module = ["context_service.pipelines.sensors.*", "context_service.pipelines.jobs.*", "context_service.pipelines.schedules", "context_service.pipelines.assets.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# dagster is optional (pipelines group) - ignore when not installed
[[tool.mypy.overrides]]
module = ["dagster", "dagster.*"]
ignore_missing_imports = true

# neo4j driver lacks py.typed marker
[[tool.mypy.overrides]]
module = ["neo4j", "neo4j.*"]
ignore_missing_imports = true

# qdrant-client lacks py.typed marker
[[tool.mypy.overrides]]
module = ["qdrant_client", "qdrant_client.*"]
ignore_missing_imports = true

# redis.asyncio lacks stubs
[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

# opentelemetry optional
[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

# fastapi/starlette lack complete stubs
[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "starlette", "starlette.*"]
ignore_missing_imports = true

# sqlalchemy lacks complete stubs
[[tool.mypy.overrides]]
module = ["sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true

# batched lacks stubs
[[tool.mypy.overrides]]
module = ["batched", "batched.*"]
ignore_missing_imports = true

# litellm lacks stubs
[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true

# taskiq lacks stubs
[[tool.mypy.overrides]]
module = ["taskiq", "taskiq.*", "taskiq_redis", "taskiq_redis.*"]
ignore_missing_imports = true

# prometheus_client lacks stubs
[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true

# ML/embedding libs (optional heavy deps)
[[tool.mypy.overrides]]
module = ["torch", "torch.*", "transformers", "transformers.*", "sentence_transformers", "sentence_transformers.*", "fastembed", "fastembed.*", "dtaidistance", "dtaidistance.*"]
ignore_missing_imports = true

# jwt/uvicorn
[[tool.mypy.overrides]]
module = ["jwt", "jwt.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

# pydantic-ai (custodian agents)
[[tool.mypy.overrides]]
module = ["pydantic_ai", "pydantic_ai.*"]
ignore_missing_imports = true

# SPARQLWrapper (wikidata extraction)
[[tool.mypy.overrides]]
module = ["SPARQLWrapper", "SPARQLWrapper.*"]
ignore_missing_imports = true

# fastmcp and mcp SDK lack py.typed markers (upstream issue)
[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*", "mcp", "mcp.*"]
ignore_missing_imports = true

# workos lacks type stubs (no types-workos on PyPI)
[[tool.mypy.overrides]]
module = ["workos", "workos.*"]
ignore_missing_imports = true

# asyncpg lacks type stubs
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

# google-cloud libs lack py.typed markers
[[tool.mypy.overrides]]
module = ["google.cloud", "google.cloud.*"]
ignore_missing_imports = true

# MCP tools use untyped @mcp.tool decorator from fastmcp
[[tool.mypy.overrides]]
module = ["context_service.mcp.tools.*", "context_service.mcp.server"]
disallow_untyped_decorators = false

# FastAPI routes use untyped decorators (@app.get, @router.post, etc.)
[[tool.mypy.overrides]]
module = ["context_service.api.*", "beacon_service.*"]
disallow_untyped_decorators = false

# Taskiq worker/tasks use untyped decorators
[[tool.mypy.overrides]]
module = ["context_service.reactions.worker", "context_service.reactions.tasks"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "integration: tests that require live docker stack (Memgraph, Qdrant, Redis)",
]

